refactor : 코드리뷰에 대한 수정 - import 명시적으로 사용 - Stream.toList() 로 변경 (수정 불가능, Null 허용) - dto package 위치 변경 -> api - docs package 위치 변경 -> root